isdargo/templates/ingress/oes-ui-ingress.yaml
---
# Source: isdargo/templates/ingress/oes-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-isdargo-oes
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
  name: oes-ui-ingress
spec:
  rules:
  - host: isd-argotest.cdaas.opsmx.org
    http:
      paths:
      - backend:
          service:
            name: oes-ui
            port:
              number: 8093
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - isd-argotest.cdaas.opsmx.org
    secretName: oes-ui-ingress
